fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,7 @@ body {
 }
 
 .profile-photo {
-  box-shadow: 0px 0px 12px rgba(252, 250, 250, 0.5);
+  box-shadow: 0px 0px 20px rgba(252, 250, 250, 0.5);
   border: solid 2px white;
   transition: 0.3s ease;
   padding: 0;
@@ -125,7 +125,7 @@ body {
 }
 
 .profile-photo:hover {
-  box-shadow: 0px 0px 20px rgba(252, 250, 250, 0.5);
+  box-shadow: 0px 0px 130px rgba(252, 250, 250, 0.5);
 }
 
 .bio-text {
@@ -640,7 +640,7 @@ header {
 
 @media (max-width: 500px) {
   .logo-images img {
-    width: 125px;
+    width: 100px;
   }
 
   .about-text {
